[package]
name = "gearhead"
version = "0.0.1"
edition = "2021"
author = "23skdu"

[dependencies]
axum = { version = "0.7.1" }
axum-template = { version = "2.0.0" }
minijinja = { version = "1.0.10" }
serde = { version = "1.0.193", features = ["derive"] }
sqlite = "0.32.0"
tokio =  { version = "1.34.0", features = ["full"] }
